added request.html to page templates

--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -54,6 +54,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'view_all_users' %}">Users</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'request' %}">Request</a>
+                </li>
+                
             </ul>
             <ul class="navbar-nav ml-auto">
                 {% if request.user.is_authenticated %}
