request form created and showing up on request page

--- a/apps/core/templates/pages/request.html
+++ b/apps/core/templates/pages/request.html
@@ -16,7 +16,7 @@
   </p>
 </div>
 
-<p>More stuff. {{ example_context_variable }}.</p>
+<p>Request Form. {{ form }}.</p>
 
 {% endblock content %}
 
