--- a/apps/core/templates/pages/request.html
+++ b/apps/core/templates/pages/request.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load bootstrap4 %}
 
 {% block title %}
     My Site - Home
@@ -15,9 +16,16 @@
     <a class="btn btn-primary btn-lg" href="{% url 'about' %}" role="button">Learn more</a>
   </p>
 </div>
-
-<p>Request Form. {{ form }}.</p>
-
+<h3>Request your Book</h3>
+<div class="card border rounded">
+  <div class="card-body">
+      <form method="POST">
+          {% csrf_token %}
+          {% bootstrap_form form %}
+          <button class="btn btn-lg btn-primary btn-block">Submit</button>
+      </form>
+  </div>
+</div>
 {% endblock content %}
 
 
