--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -57,7 +57,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'request' %}">Request</a>
                 </li>
-                
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'email_send' %}">Send Email</a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 {% if request.user.is_authenticated %}
