--- a/apps/core/templates/pages/request.html
+++ b/apps/core/templates/pages/request.html
@@ -26,6 +26,17 @@
       </form>
   </div>
 </div>
+
+<br>
+
+<h3>Requested Donations</h3>
+{% for donation_request in donation_requests %}
+    <hr />
+    <h4>{{ donation_request.title }}</h4>
+    <p><strong>Quantity:</strong> {{ donation_request.quantity }}</p>
+    <p><strong>Details:</strong> {{ donation_request.description }}</p>
+    <p>(id #: {{ donation_request.id }})</p>
+{% endfor %}
 {% endblock content %}
 
 
