added donate page and included request listings.  updated page titles

--- a/apps/core/templates/pages/donate.html
+++ b/apps/core/templates/pages/donate.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 
 {% block title %}
-    Request
+    Donate
 {% endblock title %}
 
 
@@ -16,17 +16,8 @@
     <a class="btn btn-primary btn-lg" href="{% url 'about' %}" role="button">Learn more</a>
   </p>
 </div>
-<h3>Request your Book</h3>
-<div class="card border rounded">
-  <div class="card-body">
-      <form method="POST">
-          {% csrf_token %}
-          {% bootstrap_form form %}
-          <button class="btn btn-lg btn-primary btn-block">Submit</button>
-      </form>
-  </div>
-</div>
 
+helo
 <br>
 
 <h3>Requested Donations</h3>
