--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -57,6 +57,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'request' %}">Request</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'donate' %}">Donate</a>
+                </li>
                 
             </ul>
             <ul class="navbar-nav ml-auto">
