--- a/apps/core/templates/pages/request.html
+++ b/apps/core/templates/pages/request.html
@@ -41,10 +41,15 @@
 and username of the creator -->
 <div>
 on {{ donation_request.created|date:"F jS Y" }} by
-<a class="btn btn-link" href="/account/users/{{ rl.creator_user.username }}" >
+<a class="btn btn-link" href="/account/users/{{ donation_request.creator_user.username }}" >
     {{ donation_request.creator_user }}
     <img src="{{ donation_request.creator_user.gravatar }}" class="navbar-avatar" />
 </a>
+
+
+  {% if request.user == donation_request.creator_user %}
+    <a href="/request-delete/{{ donation_request.id }}/" class="btn btn-outline-danger btn-sm">X</a>
+  {% endif %}
 </div>
 
 {% endfor %}
