--- a/apps/core/templates/pages/donate.html
+++ b/apps/core/templates/pages/donate.html
@@ -20,7 +20,7 @@
 
 <br>
 
-<h3>Requested Donations</h3>
+<h3>Donate These Items and Make Someone Happy</h3>
 {% for donation_request in donation_requests %}
     <hr />
     {% if donation_request.cover_url %}
@@ -36,8 +36,8 @@
 <!-- This shows the creation date of the list, along with the avatar
 and username of the creator -->
 <div>
-on {{ donation_request.created|date:"F jS Y" }} by
-<a class="btn btn-link" href="/account/users/{{ rl.creator_user.username }}" >
+Submitted on {{ donation_request.created|date:"F jS Y" }} by
+<a class="btn btn-link" href="/account/users/{{ donation_request.creator_user.username }}" >
     {{ donation_request.creator_user }}
     <img src="{{ donation_request.creator_user.gravatar }}" class="navbar-avatar" />
 </a>
