added email address to profile page as one way for donor to contact recipient

--- a/apps/accounts/templates/accounts/profile_page.html
+++ b/apps/accounts/templates/accounts/profile_page.html
@@ -19,7 +19,11 @@
     </div>
 
     <div class="col-md-9">
-        stuff could go here...
+<br>THANK YOU SO MUCH FOR YOUR PLEDGE TO DONATE!!!<br>
+<br>Please contact me at this address for more information on how to make your donation:<br>  {{ user.email }}
+
+
+
     </div>
 </div>
 {% endblock %}
