cleaned, simplified pages and navbar

--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -34,7 +34,7 @@
     <div class="container">
         <a class="navbar-brand" href="/">
             <!-- Add your logo here!  <img src="" /> -->
-            My Site
+            DoWeDonate?!
         </a>
 
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,15 +45,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home' %}">Start</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'view_all_users' %}">Users</a>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'request' %}">Request</a>
                 </li>
