--- a/apps/core/templates/pages/donate.html
+++ b/apps/core/templates/pages/donate.html
@@ -8,12 +8,12 @@
 
 {% block content %}
 <div class="jumbotron">
-  <h1 class="display-4">My Site</h1>
-  <p class="lead">This is a simple Jumbotron component from Bootstrap 4.</p>
+  <h1 class="display-4">Donate to a Needy Soul!</h1>
+  <p class="lead">Here is a list of book requests. Find the book you would like to donate. </p>
   <hr class="my-4">
-  <p>Edit this to include your content.</p>
+  <p>You must be logged in to get the contact info for where to send your book donation.</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="{% url 'about' %}" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Log in</a>
   </p>
 </div>
 
