--- a/apps/core/templates/pages/request.html
+++ b/apps/core/templates/pages/request.html
@@ -8,13 +8,10 @@
 
 {% block content %}
 <div class="jumbotron">
-  <h1 class="display-4">My Site</h1>
-  <p class="lead">This is a simple Jumbotron component from Bootstrap 4.</p>
+  <h1 class="display-4">Request a Book Donation</h1>
+  <p class="lead">Request the book you have been hankering for!</p>
   <hr class="my-4">
-  <p>Edit this to include your content.</p>
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="{% url 'about' %}" role="button">Learn more</a>
-  </p>
+  <p>Just fill out the form below and with luck someone out there will be generous enough to contact you with their wish to donate your beloved book!</p>
 </div>
 <h3>Request your Book</h3>
 <div class="card border rounded">
